# pandas-to-excel-test

./: main.py  pyproject.toml
input/: sample.xlsx
output/: excel xls - xlwt.xls  excel xlsx - openpyxl.xlsx  excel xlsx - xlsxwriter.xlsx
output/excel xlsx - openpyxl/docProps/: core.xml
output/excel xlsx - openpyxl/xl/worksheets/: sheet1.xml
output/excel xlsx - xlsxwriter/docProps/: core.xml
output/excel xlsx - xlsxwriter/xl/: sharedStrings.xml
output/excel xlsx - xlsxwriter/xl/worksheets/: sheet1.xml
