[tool.poetry]
name = "pandas-to-excel-test"
version = "0.1.0"
description = ""
authors = ["Breno Fernandes <brenojesusfernandes@pm.com>"]

[tool.poetry.dependencies]
python = "3.7.4"
pandas = "1.3.5"
XlsxWriter = "3.0.3"
openpyxl = "3.0.9"
xlwt = "1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
